--- a/app/src/main/res/layout/fragment_team_lineup.xml
+++ b/app/src/main/res/layout/fragment_team_lineup.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context="com.example.jocke.kotlin.TeamLineupFragment">
 
+    <ImageView
+        android:id="@+id/football_field_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/soccer_field"
+        android:scaleType="fitXY"/>
+
+    <ImageView
+        android:id="@+id/knapp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerInParent="true"
+        app:srcCompat="@drawable/ic_00_black_history"
+        android:scaleType="fitXY"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,12 +38,5 @@
 
             <include layout="@layout/toolbar_teamline_up"/>
         </android.support.v7.widget.Toolbar>
-
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/soccer_field"
-            android:scaleType="fitXY"/>
     </LinearLayout>
 </RelativeLayout>
