--- a/app/src/main/res/layout/upcoming_game_overview.xml
+++ b/app/src/main/res/layout/upcoming_game_overview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,41 +17,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="12dp"
         android:gravity="center_vertical"
+        android:layout_marginEnd="4dp"
         android:orientation="horizontal">
 
         <TextView
+            style="@style/Title_Large.Family_Normal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/title_location"
-            android:textSize="16sp"/>
+            android:text="@string/title_location"/>
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/Normal_Button"
             android:background="?attr/selectableItemBackground"
-            android:clickable="true"
             android:contentDescription="@string/content_description_google_maps"
-            android:padding="12dp"
             app:srcCompat="@drawable/ic_00_black_location"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/placeholder_date"
-            android:textSize="16sp"/>
+            style="@style/Title_Medium.Family_Normal"
+            android:text="@string/placeholder_date"/>
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/Normal_Button"
             android:background="?attr/selectableItemBackground"
-            android:clickable="true"
             android:contentDescription="@string/content_description_google_maps"
-            android:padding="12dp"
             app:srcCompat="@drawable/ic_00_black_open_new"/>
 
     </LinearLayout>
