--- a/app/src/main/res/values/styles-image-icons.xml
+++ b/app/src/main/res/values/styles-image-icons.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Normal_Icon">
+    <style name="Normal_Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:padding">12dp</item>
