--- a/app/src/main/res/layout/toolbar_overview.xml
+++ b/app/src/main/res/layout/toolbar_overview.xml
@@ -15,7 +15,7 @@
         android:gravity="start|center_vertical"
         android:text="@string/title_over_view"/>
 
-    <!-- Apply the manually set inset of the toolbar, and then apply the imageviews own width + the inset -->
+    <!-- Apply the manually set inset of the toolbar, and then apply the imageviews deviceWidthidth + the inset -->
     <ImageView
         android:id="@+id/club_crest_image_view"
         style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
