--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -14,42 +14,47 @@
         android:orientation="vertical"
         tools:openDrawer="start">
 
-        <LinearLayout
-            style="@style/LinearLayout_Wrap.Vertical">
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:fillViewport="true"
+            android:layout_height="match_parent">
 
-            <!-- Manually control the inset of the hamburger icon -->
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                style="@style/Toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:contentInsetStart="0dp"
-                app:contentInsetStartWithNavigation="0dp"
-                tools:showIn="@layout/fragment_overview">
+            <LinearLayout
+                style="@style/LinearLayout_Wrap.Vertical">
 
-                <include layout="@layout/toolbar_overview"/>
-            </android.support.v7.widget.Toolbar>
+                <!-- Manually control the inset of the hamburger icon -->
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    style="@style/Toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:contentInsetStart="0dp"
+                    app:contentInsetStartWithNavigation="0dp"
+                    tools:showIn="@layout/fragment_overview">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/toolbar_dropshadow"/>
+                    <include layout="@layout/toolbar_overview"/>
+                </android.support.v7.widget.Toolbar>
 
-            <android.support.v7.widget.CardView
-                style="@style/Overview_CardView">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@drawable/toolbar_dropshadow"/>
 
-                <include layout="@layout/next_game_overview"/>
-            </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    style="@style/Overview_CardView">
 
-            <android.support.v7.widget.CardView
-                style="@style/Overview_CardView">
+                    <include layout="@layout/next_game_overview"/>
+                </android.support.v7.widget.CardView>
 
-                <include layout="@layout/upcoming_game_overview"/>
-            </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    style="@style/Overview_CardView">
 
-            <include layout="@layout/scoreboard_overview"/>
-        </LinearLayout>
+                    <include layout="@layout/upcoming_game_overview"/>
+                </android.support.v7.widget.CardView>
 
+                <include layout="@layout/scoreboard_overview"/>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
         <!-- GRAVITY LEFT STATES THE DRAWER CONTENT -->
 
         <include
