--- a/app/src/main/res/layout/fragment_team_lineup.xml
+++ b/app/src/main/res/layout/fragment_team_lineup.xml
@@ -5,22 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jocke.kotlin.TeamLineupFragment">
+    android:background="@color/black_overlay"
+    android:keepScreenOn="true">
 
     <ImageView
         android:id="@+id/football_field_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/soccer_field"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:layout_marginTop="?attr/actionBarSize"
+        app:srcCompat="@drawable/soccer_field"/>
 
-    <ImageView
-        android:id="@+id/knapp"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_centerInParent="true"
-        app:srcCompat="@drawable/ic_00_black_history"
-        android:scaleType="fitXY"/>
 
     <LinearLayout
         android:layout_width="match_parent"
