--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="alpha_white_lime">#f2f2f2</color>
     <color name="black_overlay">#66000000</color>
     <color name="toolbar_shadow_yellow">#884d4c31</color>
+
+    <color name="disabled_yellow">#59f1c40f</color>
+    <color name="disabled">#59000000</color>
 </resources>
