--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,10 +25,11 @@
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="AppTheme.PositiveButton" parent="Widget.AppCompat.Button.Colored">
+    <style name="AppTheme.PositiveButton" parent="@style/Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">@color/darker_yellow</item>
         <item name="colorControlHighlight">@color/alpha_white_lime</item>
     </style>
+
 
     <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/black_overlay</item>
