--- a/app/src/main/res/layout/fragment_team_lineup.xml
+++ b/app/src/main/res/layout/fragment_team_lineup.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_team_lineup_container"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +13,8 @@
         android:id="@+id/football_field_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
         android:layout_marginTop="?attr/actionBarSize"
+        android:scaleType="fitXY"
         app:srcCompat="@drawable/soccer_field"/>
 
 
