--- a/app/src/main/res/layout/scoreboard_overview.xml
+++ b/app/src/main/res/layout/scoreboard_overview.xml
@@ -40,6 +40,12 @@
                 android:fontFamily="sans-serif-medium"
                 android:text="1"
                 android:textSize="16sp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:tint="@color/colorAccent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_00_black_history"/>
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
