--- a/app/src/main/res/layout/toolbar_overview.xml
+++ b/app/src/main/res/layout/toolbar_overview.xml
@@ -13,7 +13,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="start|center_vertical"
-        android:text="@string/title_over_view"/>
+        android:text="@string/title_over_view"
+        android:textSize="18sp"/>
 
     <!-- Apply the manually set inset of the toolbar, and then apply the imageviews deviceWidthidth + the inset -->
     <ImageView
