--- a/app/src/main/res/layout/toolbar_teamline_up.xml
+++ b/app/src/main/res/layout/toolbar_teamline_up.xml
@@ -11,6 +11,7 @@
         style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:gravity="start|center_vertical"
         android:text="@string/placeholder_away_location"/>
 
@@ -18,6 +19,7 @@
         style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="14sp"
         android:gravity="start|center_vertical"
         android:text="@string/placeholder_away_arena"/>
 
