--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorControlNormal">#000000</item>
         <item name="colorControlActivated">#000000</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="windowActionModeOverlay">true</item>
     </style>
 
     <style name="FullscreenTheme" parent="AppTheme">
